Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     
+
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5d17648e8cc8353a0c468bd5-jy6lyvyf.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjpmYWxzZSwiZ29vZ2xlIjp0cnVlLCJfaWQiOiI1ZDE3NjQ4ZThjYzgzNTNhMGM0NjhiZDUiLCJub21icmUiOiJUZXN0MSIsImVtYWlsIjoidGVzdDFAZ21haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTYzMTkyMTI2LCJleHAiOjE1NjMzNjQ5MjZ9.VfvEEgGd4H8Fme40ytP-GI-_ys0mRag6G7vlanocf6A" alt=""> -->
+    
+
     <h1>Google</h1>
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
